# scale-typegen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  code.rs  i.rs  notes.md
.github/workflows/: rust.yml
artifacts/: generated_polkadot.rs  polkadot.json
description/: Cargo.toml  README.md
description/src/: description.rs  formatting.rs  lib.rs  transformer.rs
description/src/type_example/: mod.rs  rust_type.rs  rust_value.rs  scale_value.rs
examples/: polkadot.rs
scale-description/: Cargo.toml
scale-description/src/: description.rs  formatting.rs  lib.rs  transformer.rs
scale-description/src/type_example/: mod.rs  rust_type.rs  scale_value.rs
scale-example/: Cargo.toml
scale-example/src/: lib.rs
scale-typegen/: Cargo.toml
scale-typegen/examples/: polkadot.rs
scale-typegen/src/: ext.rs  lib.rs  utils.rs
scale-typegen/src/tests/: mod.rs  utils.rs
scale-typegen/src/typegen/: mod.rs  resolve_type_paths.rs  type_params.rs
scale-typegen/src/typegen/ir/: type_ir.rs
src/: lib.rs  tests.rs  utils.rs
src/codegen/: derives.rs  mod.rs  module_ir.rs  type_ir.rs  type_path.rs
src/tests/: mod.rs  utils.rs
src/typegen/: error.rs  mod.rs  module_ir.rs  settings.rs  substitutes.rs  tests.rs  type_def_params.rs  type_ir.rs  type_params.rs  type_path.rs  type_path_resolver.rs  unused_type_params.rs
src/typegen/ir/: mod.rs  type_ir.rs
src/typegen/settings/: derives.rs  mod.rs  substitutes.rs
typegen/: Cargo.toml  README.md  no_std_code.rs  std_code.rs
typegen/examples/: polkadot.rs
typegen/src/: lib.rs  utils.rs
typegen/src/tests/: mod.rs  utils.rs
typegen/src/typegen/: error.rs  mod.rs  resolve_type_paths.rs  type_params.rs  type_path.rs  validate_settings.rs  validation.rs
typegen/src/typegen/ir/: mod.rs  module_ir.rs  type_ir.rs
typegen/src/typegen/settings/: derives.rs  mod.rs  substitutes.rs
