[workspace]
members = ["typegen", "description"]
resolver = "2"


[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
version = "0.0.1"
rust-version = "1.70.0"
license = "Apache-2.0 OR GPL-3.0"
repository = "https://github.com/paritytech/scale-typegen"
homepage = "https://www.parity.io/"


[workspace.dependencies]

scale-typegen-description = { version = "0.0.1", path = "description" }
scale-typegen = { version = "0.0.1", path = "typegen" }

# external dependencies
parity-scale-codec = { version = "3.6.5", features = ["derive"] }
proc-macro2 = "1.0.69"
quote = "1.0.33"
scale-bits = "0.4.0"
scale-info = { version = "2.10.0", features = ["derive", "bitvec", "decode", "docs", "serde"] }
smallvec = "1.10.0"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
thiserror = "1.0.50"
prettyplease = "0.2.15"
scale-decode = "0.9.0"
scale-encode = "0.5.0"
frame-metadata = { version = "16.0.0", default-features = false, features = ["current", "std"] }
bitvec = { version = "1", default-features = false }
pretty_assertions = "1.4.0"
anyhow = "1.0.75"
peekmore = "1.3.0"
scale-value = { version = "0.13.0" }
rand_chacha = { version = "0.3.1" }
rand = { version = "0.8.5" }
