[workspace]
members = ["typegen", "description"]
resolver = "2"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
version = "0.11.0"
rust-version = "1.81.0"
license = "Apache-2.0 OR GPL-3.0"
repository = "https://github.com/paritytech/scale-typegen"
homepage = "https://www.parity.io/"

[workspace.dependencies]
scale-typegen-description = { version = "0.11.0", path = "description" }
scale-typegen = { version = "0.11.0", path = "typegen" }

# external dependencies
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
proc-macro2 = "1.0.95"
quote = "1.0.33"
scale-bits = "0.7.0"
scale-info = { version = "2.11.1", features = ["derive", "bit-vec", "decode", "docs", "serde"] }
smallvec = "1.10.0"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
thiserror = { version = "2.0.11", default-features = false }
prettyplease = "0.2.25"
scale-decode = "0.16.0"
scale-encode = "0.10.0"
frame-metadata = { version = "20.0.0", default-features = false, features = ["current", "std"] }
bitvec = { version = "1", default-features = false, features = ["alloc"] }
pretty_assertions = "1.4.1"
anyhow = "1.0.92"
peekmore = "1.3.0"
scale-value = "0.18.0"
rand_chacha = "0.3.1"
rand = "0.8.5"
