[package]
name = "scale-typegen-description"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# define the default features:

[features]
default = ["type-example"]
type-example = ["scale-value", "proc-macro2", "rand_chacha", "rand", "quote", "scale-typegen"]

[dependencies]
anyhow = { workspace = true }
peekmore = { workspace = true }
smallvec = { workspace = true }
scale-info = { workspace = true }

#dependencies for "type-example" feature:
scale-value = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
scale-typegen = { workspace = true, optional = true }
quote = { workspace = true, optional = true }

[dev-dependencies]
indoc = "2"
pretty_assertions = { workspace = true }
parity-scale-codec = { workspace = true }
syn = { workspace = true }
