[package]
name = "scale-typegen-description"
version = { workspace = true }
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/scale-typegen"
description = "Type Description and Examples for SCALE encoded Rust Types"

[features]
default = ["type-example"]
type-example = ["scale-value", "proc-macro2", "rand_chacha", "rand", "quote", "scale-typegen"]

[dependencies]
anyhow = { workspace = true }
peekmore = { workspace = true }
smallvec = { workspace = true }
scale-info = { workspace = true }

#dependencies for "type-example" feature:
scale-value = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
scale-typegen = { workspace = true, optional = true }
quote = { workspace = true, optional = true }

[dev-dependencies]
indoc = "2"
pretty_assertions = { workspace = true }
parity-scale-codec = { workspace = true }
syn = { workspace = true }
