[package]
name = "scale-description"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
peekmore = "1.3.0"
smallvec = { workspace = true }
scale-info = { workspace = true }


[dev-dependencies]
indoc = "2"
pretty_assertions = { workspace = true }
parity-scale-codec = { workspace = true }
