[package]
name = "scale-typegen"
version = "0.0.1"
edition = "2021"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/scale-typegen"
description = "Type Generation for SCALE encoded Rust Types"

[dependencies]
parity-scale-codec = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
scale-bits = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }

scale-description = { workspace = true }

[dev-dependencies]
prettyplease = { workspace = true }
scale-decode = { workspace = true }
scale-encode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bitvec = { workspace = true }
pretty_assertions = { workspace = true }
