[package]
name = "scale-typegen"
version = "0.0.1"
edition = "2021"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/scale-typegen"
description = "Type Generation for SCALE encoded Rust Types"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
scale-bits = { workspace = true }
parity-scale-codec = { workspace = true }
prettyplease = { workspace = true }
frame-metadata = { workspace = true }
bitvec = { workspace = true }
pretty_assertions = { workspace = true }
